server/deployment/kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-deployment
  template:
    metadata:
      labels:
        app: frontend-deployment
    spec:
      containers:
        - name: game-app
          image: asia-east1-docker.pkg.dev/playgame-373510/playgame/server:latest-k8s
          ports:
            - name: http
              containerPort: 8081
              protocol: TCP
          resources:
            requests:
              cpu: "50m"
              memory: "100Mi"
            limits:
              cpu: "50m"
              memory: "100Mi"
